DEV-12052, DEV-12097 - Worklet bug fixing, wireframe matching, overflow-Y scrolling

--- a/app/assets/stylesheets/worklets.scss
+++ b/app/assets/stylesheets/worklets.scss
@@ -31,6 +31,7 @@ div[data-page="WorkletRun"] {
     width: $worklet-right-column-width;
 
     #sidebar {
+      width: $worklet-right-column-width;
       /* position: absolute; */
       /* width: 266px; */
       /* padding-left: 16px; */
@@ -38,7 +39,6 @@ div[data-page="WorkletRun"] {
       padding-left: 0;
       padding-top: 0;
       top: 0;
-      right: 85px;
       bottom: 0;
     }
   }
@@ -66,6 +66,7 @@ div[data-page="PublishedWorkletShow"] {
     width: $worklet-right-column-width;
 
     #sidebar {
+      width: $worklet-right-column-width;
       /* position: absolute; */
       /* width: 266px; */
       /* padding-left: 16px; */
@@ -73,7 +74,6 @@ div[data-page="PublishedWorkletShow"] {
       padding-left: 0;
       padding-top: 0;
       top: 45px;
-      right: 85px;
       bottom: 0;
     }
   }
